let's use buttons instead of divs and spans so more features are accessible by keyboard fix some accessibility issues with buttons this commit will also slightly reformat a few things

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -871,6 +871,10 @@ the form-control fails to do that so we do the border ourselves */
     line-height: 150%;
 }
 
+.lh-normal {
+    line-height: normal;
+}
+
 .togglable-section-title {
     color: $medium;
     font-size: 100%;
