--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -4,7 +4,9 @@
     <div class='input-group'>
       <input data-action='favtags-search' class='form-control form-inline' type='text' placeholder='{{ 'Filter'|trans }}' />
       <div class='input-group-append'>
-        <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
+        <button data-action='clear-favtags-search' class='btn btn-outline-secondary' type='button' title='{{ 'Clear'|trans }}' aria-label='{{ 'Clear'|trans }}'>
+          <i class='fas fa-times fa-fw'></i>
+        </button>
       </div>
     </div>
     <hr>
