--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -19,9 +19,9 @@
 {% include('permissions-edit-modal.html') %}
 <label class='col-form-label mr-3 edit-mode-label'><i class='fas fa-fw fa-{{ icon }} mr-1' title='{{ label }}'></i>{{ label }}</label>
 {% if not Entity.isReadOnly %}
-  <div data-action='toggle-modal' data-target='permModal-{{ rw }}'>
+  <button type='button' title='{{ modalTitle }}' aria-label='{{ modalTitle }}' class='btn border-0 lh-normal' data-action='toggle-modal' data-target='permModal-{{ rw }}'>
     <i class='fas fa-fw fa-square-plus fa-2x'></i>
-  </div>
+  </button>
 {% endif %}
 <div class='vertical-separator'></div>
 {% include('view-permissions-details.html') %}
