--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -60,7 +60,7 @@
     <label for='custom_id_input' class='col-form-label mx-3 edit-mode-label'>{{ 'Custom ID'|trans }}</label>
     <div class='input-group justify-content-end flex-nowrap'>
       <div class='input-group-prepend'>
-        <button class='btn btn-secondary' data-action='get-next-custom-id' data-endpoint='{{ Entity.type }}'>{{ 'Get next'|trans }}</button>
+        <button class='btn btn-secondary' type='button' data-action='get-next-custom-id' data-endpoint='{{ Entity.type }}'>{{ 'Get next'|trans }}</button>
       </div>
       <input id='custom_id_input' class='form-control' data-trigger='change' data-model='{{ Entity.type }}/{{ Entity.entityData.id }}' data-target='custom_id' type='number' min='0' value='{{ Entity.entityData.custom_id }}' />
     </div>
@@ -97,8 +97,8 @@
       </div>
 
       <div class='mt-4 text-center'>
-        <button {{ not displayMainText ? 'hidden' }} data-action='update-entity-body' class='btn btn-primary'>{{ 'Save'|trans }}</button>
-        <button data-action='update-entity-body' data-redirect='view' class='btn btn-secondary'>{{ 'Save and go back'|trans }}</button>
+        <button type='button' {{ not displayMainText ? 'hidden' }} data-action='update-entity-body' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+        <button type='button' data-action='update-entity-body' data-redirect='view' class='btn btn-secondary'>{{ 'Save and go back'|trans }}</button>
       </div>
     </div>
     <hr>
@@ -166,8 +166,8 @@
 
       <hr>
       <div>
-        <button id='clearCanvas' class='btn btn-danger'>{{ 'Clear'|trans }}</button>
-        <button id='saveCanvas' class='btn btn-primary' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ 'Save'|trans }}</button>
+        <button type='button' id='clearCanvas' class='btn btn-danger'>{{ 'Clear'|trans }}</button>
+        <button type='button' id='saveCanvas' class='btn btn-primary' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ 'Save'|trans }}</button>
       </div>
     </div>
   </div>
@@ -186,9 +186,9 @@
     <canvas id='sketcher'></canvas>
   </div>
   <div class='mt-3'>
-    <button class='btn btn-primary mr-3' data-filetype='chemjson' data-action='save-chem-as-file'>{{ 'Save as JSON'|trans }}</button>
-    <button class='btn btn-primary mr-3' data-filetype='png' data-action='save-chem-as-file'>{{ 'Save as image'|trans }}</button>
-    <button class='btn btn-primary mr-3' data-filetype='rxn' data-action='save-chem-as-file'>{{ 'Save as RXN'|trans }}</button>
+    <button class='btn btn-primary mr-3' type='button' data-filetype='chemjson' data-action='save-chem-as-file'>{{ 'Save as JSON'|trans }}</button>
+    <button class='btn btn-primary mr-3' type='button' data-filetype='png' data-action='save-chem-as-file'>{{ 'Save as image'|trans }}</button>
+    <button class='btn btn-primary mr-3' type='button' data-filetype='rxn' data-action='save-chem-as-file'>{{ 'Save as RXN'|trans }}</button>
   </div>
 </div>
 
