--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -56,11 +56,11 @@
         {% for user in usersArr %}
           {% include('archive-user-modal.html') %}
           {# Modal for managing users to teams, generated for each user #}
-          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-label='{{ 'Manage teams for user'|trans }}' aria-hidden='true'>
+          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-labelledby='manageTeamsForUser' aria-hidden='true'>
             <div class='modal-dialog modal-xl' role='document'>
               <div class='modal-content'>
                 <div class='modal-header'>
-                  <h5 class='modal-title'>{{ 'Manage teams for user'|trans }} - {{ user.fullname|raw }}</h5>
+                  <h5 class='modal-title' id='manageTeamsForUser'>{{ 'Manage teams for user'|trans }} - {{ user.fullname|raw }}</h5>
                   <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
                     <span aria-hidden='true'>&times;</span>
                   </button>
@@ -80,7 +80,7 @@
                               <option value='2' {{ currentTeam.usergroup == 2 ? 'selected' }}>{{ 'Admin'|trans }}</option>
                               <option value='4' {{ currentTeam.usergroup == 4 ? 'selected' }}>{{ 'User'|trans }}</option>
                             </select>
-                            <button data-action='patch-user2team-group' data-userid='{{ user.userid }}' data-team='{{ team.id }}' data-target='usergroup' class='btn btn-primary brl-none'>{{ 'Save'|trans }}</button>
+                            <button type='button' data-action='patch-user2team-group' data-userid='{{ user.userid }}' data-team='{{ team.id }}' data-target='usergroup' class='btn btn-primary brl-none'>{{ 'Save'|trans }}</button>
                           </span>
                         </div>
                         <div class='d-flex justify-content-between'>
@@ -103,7 +103,7 @@
                         <option value='{{ team.id }}'>{{ team.name }}</option>
                         {% endfor %}
                       </select>
-                      <button data-action='create-user2team' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Go'|trans }}</button>
+                      <button type='button' data-action='create-user2team' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Go'|trans }}</button>
                     </span>
                   {% endif %}
                 </div>
@@ -186,16 +186,16 @@
                         <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='resetUserPasswordInput_{{ user.userid }}'><i class='fas fa-eye' aria-hidden='true'></i></span>
                       </div>
                       <div class='input-group-append'>
-                        <button data-action='reset-user-password' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+                        <button type='button' data-action='reset-user-password' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
                       </div>
                     </div>
                   {% endif %}
                   {# MORE OPTIONS MENU #}
                   <div class='dropdown'>
-                    <div class='clickable p-2 hl-hover-gray text-center rounded' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
+                    <button class='btn p-2 hl-hover-gray text-center ' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' type='button'>
                       <i class='fas fa-ellipsis-v'></i>
-                    </div>
-                    <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+                    </button>
+                    <div class='dropdown-menu dropdown-menu-right'>
                       {# MANAGE TEAMS #}
                       {% if App.Users.userData.is_sysadmin and (App.Request.getScriptName|split('/')|last == 'sysconfig.php') %}
                         <div class='dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
@@ -380,7 +380,7 @@
             <input type='checkbox' class='mr-1' id='remoteUserIsAdmin'>{{ 'Admin'|trans }}
           </div>
         </div>
-          <button data-action='create-user-from-remote' class='brl-none btn btn-primary'>{{ 'Add selected'|trans }}</button>
+          <button type='button' data-action='create-user-from-remote' class='brl-none btn btn-primary'>{{ 'Add selected'|trans }}</button>
       </div>
     {% endif %}
   </div>
