--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -10,53 +10,40 @@
     {# JSON EDITOR TOOLBAR #}
     <div class='d-flex align-items-center'>
       {# ADD FIELD #}
-      <div class='mr-2'>
-        <div title='{{ 'Add field'|trans }}' data-action='toggle-modal' data-target='fieldBuilderModal' id='jsonEditorAddFieldButton' class='hl-hover-gray p-2 rounded main-action-button'>
+      <button title='{{ 'Add field'|trans }}' aria-label='{{ 'Add field'|trans }}' type='button' data-action='toggle-modal' data-target='fieldBuilderModal' id='jsonEditorAddFieldButton' class='btn hl-hover-gray p-2 main-action-button lh-normal border-0'>
           <i class='fas fa-plus fa-fw'></i>
-        </div>
-      </div>
+      </button>
 
       <div class='vertical-separator'></div>
 
       {# IMPORT FROM FILE #}
-      <div class='mr-2'>
-        <div title='{{ 'Import from file'|trans }}' data-action='json-import-file' class='hl-hover-gray p-2 rounded'>
+      <button title='{{ 'Import from file'|trans }}' aria-label='{{ 'Import from file'|trans }}' type='button' data-action='json-import-file' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
           <i class='fas fa-upload fa-fw'></i>
-        </div>
-      </div>
+      </button>
 
       {# SAVE TO FILE #}
-      <div class='mr-2'>
-        <div title='{{ 'Save as…'|trans }}' data-action='json-saveas-file' class='hl-hover-gray p-2 rounded'>
+      <button title='{{ 'Save as…'|trans }}' aria-label='{{ 'Save as…'|trans }}' type='button' data-action='json-saveas-file' class='btn hl-hover-gray p-2 lh-normal border-0'>
           <i class='fas fa-download fa-fw'></i>
-        </div>
-      </div>
+      </button>
 
       <div class='vertical-separator'></div>
 
       {# SAVE AS ATTACHMENT #}
-      <div class='mr-2'>
-        <div title='{{ 'Save as attachment'|trans }}' data-action='json-save-file' class='hl-hover-gray p-2 rounded'>
+      <button title='{{ 'Save as attachment'|trans }}' aria-label='{{ 'Save as attachment'|trans }}' type='button' data-action='json-save-file' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
           <i class='fas fa-paperclip fa-fw'></i>
-        </div>
-      </div>
+      </button>
 
       {# SAVE #}
-      <div class='mr-2'>
-        <div title='{{ 'Save'|trans }}' data-action='json-save' class='hl-hover-gray p-2 rounded'>
+      <button title='{{ 'Save'|trans }}' aria-label='{{ 'Save'|trans }}' type='button' data-action='json-save' class='btn hl-hover-gray p-2 lh-normal border-0 mr-2'>
           <i class='fas fa-save fa-fw'></i>
-        </div>
-      </div>
+      </button>
+
       <span hidden id='jsonUnsavedChangesWarningDiv'>{{ 'You have unsaved changes'|trans }}</span>
 
       {# CLEAR #}
-      <div class='ml-auto d-flex align-items-center'>
-        <div class='mr-2'>
-          <div title='{{ 'Clear'|trans }}' data-action='json-clear' class='hl-hover-gray p-2 rounded'>
+      <button title='{{ 'Clear'|trans }}' aria-label='{{ 'Clear'|trans }}' type='button' data-action='json-clear' class='btn hl-hover-gray p-2 lh-normal border-0 mr-2 ml-auto'>
             <i class='fas fa-trash-alt fa-fw'></i>
-          </div>
-        </div>
-      </div>
+      </button>
     </div>
 
     <div hidden id='jsonImportFileDiv'>
@@ -75,7 +62,7 @@
       </label>
     </div>
 
-    <span data-action='toggle-next'><i class='fas fa-fw fa-info-circle'></i></span><span hidden><a target='_blank' rel='noopener' href='https://doc.elabftw.net/metadata.html'>{{ 'See documentation about extra fields.'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></span>
+    <button class='btn lh-normal border-0 px-0' type='button' data-action='toggle-next' aria-expanded='false' title='{{ 'Information'|trans }}' aria-label='{{ 'Information'|trans }}'><i class='fas fa-fw fa-info-circle'></i></button><span hidden><a target='_blank' rel='noopener' href='https://doc.elabftw.net/metadata.html'>{{ 'See documentation about extra fields.'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></span>
     <h6 id='jsonEditorTitle'></h6>
     {% if App.Config.configArr.debug -%}
       <!-- [html-validate-disable-block no-deprecated-attr -- suppress errors from jsonEditor] -->
