--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -109,12 +109,12 @@
           <label for='password'>{{ 'Password'|trans }}</label>
           {# add tabindex=-1 to the forget password so we can switch from login to password with tab #}
           {% if showLocal %}
-            <a class='float-right underlined resetPassword' tabindex='-1' data-action='toggle-modal' data-target='resetModal'>{{ 'Forgot password?'|trans }}</a>
+            <button class='btn float-right underlined lh-normal border-0 p-0 m-0 link-like' style='font-weight:500;' data-action='toggle-modal' data-target='resetModal'>{{ 'Forgot password?'|trans }}</button>
           {% endif %}
           <div class='input-group'>
             <input class='form-control' id='password' name='password' type='password' autocomplete='current-password' required />
             <div class='input-group-append'>
-              <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='password'><i class='fas fa-eye' aria-hidden='true'></i></span>
+              <button type='button' class='btn btn-light input-border' data-action='toggle-password' data-target='password' title='{{ 'Show password'|trans }}' aria-label='{{ 'Show password'|trans }}'><i class='fas fa-eye' aria-hidden='true'></i></button>
             </div>
           </div>
 
