--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -14,7 +14,7 @@
     <i class='fas fa-chevron-left mr-1'></i>{{ 'Go back'|trans }}
 </a>
 <div id='compareRevisionsDiv' class='mt-3' hidden>
-  <button class='btn btn-secondary btn-sm' id='compareRevisionsButton' disabled data-action='compare-revisions' data-type='{{ Entity.type }}' aria-label='{{ 'Compare revisions'|trans }}'>
+  <button class='btn btn-secondary btn-sm' id='compareRevisionsButton' type='button' disabled data-action='compare-revisions' data-type='{{ Entity.type }}' aria-label='{{ 'Compare revisions'|trans }}'>
     <i class='fas fa-code-compare fa-fw mr-1 color-white'></i>{{ 'Compare revisions'|trans }}
   </button>
   <div id='compareRevisionsDiffDiv'></div>
@@ -34,7 +34,7 @@
           <span class='relative-moment' title='{{ revision.created_at }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }}
         </div>
         <div class='ml-auto'>
-          {% if not Entity.isReadOnly %}<button data-action='restore-revision' data-id='{{ Entity.id }}' data-type='{{ Entity.type }}' data-revid='{{ revision.id }}' class='btn hl-hover-gray'>{{ 'Restore'|trans }}</button>{% endif %}
+          {% if not Entity.isReadOnly %}<button type='button' data-action='restore-revision' data-id='{{ Entity.id }}' data-type='{{ Entity.type }}' data-revid='{{ revision.id }}' class='btn hl-hover-gray'>{{ 'Restore'|trans }}</button>{% endif %}
         </div>
       </div>
       <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
