--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -12,8 +12,8 @@
   <td class='title'>
     {# edit icon #}
     {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Users.isAdmin) %}
-      <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'>
-        <span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span>
+      <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' title='{{ 'Edit'|trans }}' aria-label='{{ 'Edit'|trans }}'>
+        <i class='fas fa-fw fa-pencil-alt'></i>
       </a>
     {% endif %}
     {# lock icon #}
@@ -25,7 +25,7 @@
       <i class='fas fa-box-archive fa-fw'></i>
     {% endif %}
     {# toggle body #}
-    <span class='p-1 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'><i class='fas fa-square-plus fa-fw link-like'></i></span>
+    <button class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}'><i class='fas fa-square-plus fa-fw link-like'></i></button>
     <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a>
   </td>
 
@@ -45,13 +45,13 @@
     {% if item.timestamped %}
       <i class='far fa-calendar-check mr-1'></i>
     {% endif %}
-    <span data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}' class='catstat-btn category-btn' style='--bg:#{{ item.category_color }}'>{{ item.category_title|raw }}</span>
+    <button type='button' data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}' class='btn catstat-btn category-btn lh-normal border-0' style='--bg:#{{ item.category_color }}'>{{ item.category_title|raw }}</button>
   </td>
 
   {# STATUS #}
   <td class='item-next'>
     {% if item.status %}
-      <span data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' class='catstat-btn status-btn'><i class='fas fa-circle fa-fw' style='--bg:#{{ item.status_color }}'></i> {{ item.status_title|raw }}</span>
+      <button type='button' data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' class='btn catstat-btn status-btn lh-normal border-0'><i class='fas fa-circle fa-fw' style='--bg:#{{ item.status_color }}'></i> {{ item.status_title|raw }}</button>
     {% endif %}
   </td>
 
@@ -74,7 +74,7 @@
   </td>
 
   <td class='item-owner'>
-    <span data-action='add-query-filter' data-key='owner' data-value='{{ item.userid }}'>{{ item.fullname|raw }}</span>
+    <button type='button' class='btn lh-normal border-0' style='font-weight:500;' data-action='add-query-filter' data-key='owner' data-value='{{ item.userid }}'>{{ item.fullname|raw }}</button>
   </td>
 
 </tr>
