--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -21,17 +21,13 @@
       {% else %}
         {# edit icon #}
         {% if (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Users.isAdmin) %}
-          <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'>
-            <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
-              <i class='fas fa-pencil fa-fw'></i>
-            </div>
+          <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' class='left-icon rounded mr-3 my-1 bgnd-dark' title='{{ 'Edit'|trans }}' aria-label='{{ 'Edit'|trans }}'>
+            <i class='fas fa-pencil fa-fw'></i>
           </a>
         {% else %}
         {# eye icon #}
-          <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}' title='{{ 'View'|trans }}'>
-            <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
-              <i class='fas fa-eye fa-fw'></i>
-            </div>
+          <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}' class='left-icon rounded mr-3 my-1 bgnd-dark' title='{{ 'View'|trans }}' aria-label='{{ 'View'|trans }}'>
+            <i class='fas fa-eye fa-fw'></i>
           </a>
         {% endif %}
       {% endif %}
@@ -53,11 +49,11 @@
       {# category #}
       {% if item.category %}
       {# Note: there might be something to do with mix-blend-mode: difference to get white text on dark bg et vice-versa #}
-      <span class='catstat-btn category-btn mr-2' style='--bg: #{{ item.category_color|default('bdbdbd') }}' data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}'>{{ item.category_title|raw }}</span>
+      <button class='btn catstat-btn category-btn mr-2' type='button' style='--bg: #{{ item.category_color|default('bdbdbd') }};line-height:normal;' data-action='add-query-filter' data-key='cat' data-value='{{ item.category }}'>{{ item.category_title|raw }}</button>
       {% endif %}
       {# status #}
       {% if item.status %}
-      <span class='catstat-btn status-btn bg-firstlevel' data-action='add-query-filter' data-key='status' data-value='{{ item.status }}'><i class='fas fa-circle fa-fw' style='--bg: #{{ item.status_color|default('bdbdbd') }}'></i> {{ item.status_title|raw }}</span>
+      <button class='btn catstat-btn status-btn bg-firstlevel' type='button' data-action='add-query-filter' data-key='status' data-value='{{ item.status }}' style='line-height:normal;'><i class='fas fa-circle fa-fw' style='--bg: #{{ item.status_color|default('bdbdbd') }}'></i> {{ item.status_title|raw }}</button>
       {% endif %}
     </div>
     {# end first line #}
@@ -122,9 +118,9 @@
       </div>
       <div class='ml-auto'>
         {# toggle body #}
-        <span class='p-1 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+        <button type='button' class=' btn p-1 hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}'>
           <i class='fas fa-square-plus fa-fw'></i>
-        </span>
+        </button>
       </div>
     </div>
   </div>
