--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -143,7 +143,7 @@
       <div class='col-md-3 ml-auto'>
         <div class='input-group justify-content-end flex-nowrap'>
           <div class='input-group-prepend'>
-            <button class='btn btn-secondary' data-action='remove-param-reload' data-target='item'>X</button>
+            <button class='btn btn-secondary' type='button' data-action='remove-param-reload' data-target='item'>X</button>
           </div>
           <a href='database.php?mode=view&id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
         </div>
