--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -1,87 +1,96 @@
 {# DROPDOWN MENU FOR UPLOAD #}
 <div class='dropdown'>
-  <a class='clickable float-right px-2' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
+  <button type='button' class='btn btn-link py-0 float-right px-2' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}'>
     <i class='fas fa-ellipsis-v'></i>
-  </a>
+  </button>
 
-  <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+  <div class='dropdown-menu dropdown-menu-right'>
 
   {% if mode == 'edit' %}
     {# INSERT IN TEXT in edit mode for images #}
     {% if ext matches '/(jpg|jpeg|png|gif|svg)$/i' %}
-    <a class='dropdown-item' data-action='insert-image-in-body' data-name='{{ upload.real_name|e('html') }}' data-storage='{{ upload.storage }}' data-link='{{ upload.long_name }}' data-uploadid='{{ upload.id }}'>
-        <i class='fas fa-fw fa-image mr-1'></i>{{ 'Insert in text at cursor position'|trans }}</a>
+      <button type='button' class='dropdown-item' data-action='insert-image-in-body' data-name='{{ upload.real_name|e('html') }}' data-storage='{{ upload.storage }}' data-link='{{ upload.long_name }}' data-uploadid='{{ upload.id }}'>
+        <i class='fas fa-fw fa-image mr-1'></i>{{ 'Insert in text at cursor position'|trans }}
+      </button>
     {% endif %}
 
     {# INSERT IN TEXT in edit mode for plain text #}
     {% if ext matches '/txt$/i' %}
-      <a class='dropdown-item' data-action='insert-plain-text' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
-        <i class='fas fa-fw fa-file-import mr-1'></i>{{ 'Insert in text at cursor position'|trans }}</a>
+      <button type='button' class='dropdown-item' data-action='insert-plain-text' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
+        <i class='fas fa-fw fa-file-import mr-1'></i>{{ 'Insert in text at cursor position'|trans }}
+      </button>
     {% endif %}
   {% endif %}
 
-    {# Edit filename (available in view mode too) #}
-    {% if not upload.immutable and not Entity.isReadOnly %}
-      <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
-        data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
-        <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}</a>
-    {% endif %}
+  {# Edit filename (available in view mode too) #}
+  {% if not upload.immutable and not Entity.isReadOnly %}
+    <button type='button' class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
+      data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}'>
+      <i class='fas fa-fw fa-pencil-alt mr-1'></i>{{ 'Edit filename'|trans }}
+    </button>
+  {% endif %}
 
   {% if mode == 'edit' %}
 
     {# Annotate image #}
     {% if ext matches '/(jpg|jpeg|png|gif)$/i' %}
-    <a class='dropdown-item' data-action='annotate-image' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
-        <i class='fas fa-fw fa-paint-brush mr-1'></i>{{ 'Annotate this image'|trans }}</a>
+      <button type='button' class='dropdown-item' data-action='annotate-image' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
+        <i class='fas fa-fw fa-paint-brush mr-1'></i>{{ 'Annotate this image'|trans }}
+      </button>
     {% endif %}
 
     {# LOAD IN JSON EDITOR #}
     {% if ext matches '/(json)$/i' %}
-      <a class='dropdown-item' data-uploadid='{{ upload.id }}' data-name='{{ upload.real_name }}' data-link='{{ upload.long_name }}' data-action='json-load-file'>
+      <button type='button' class='dropdown-item' data-uploadid='{{ upload.id }}' data-name='{{ upload.real_name }}' data-link='{{ upload.long_name }}' data-action='json-load-file'>
         <i class='fas fa-fw fa-{{ mode == 'edit' ? 'pencil-alt' : 'eye' }} mr-1'></i>{{ 'Load into JSON Editor'|trans }}
-      </a>
+      </button>
     {% endif %}
 
     {# Save mol file as png #}
     {% if ext matches '/(mol)$/i' %}
-      <a class='dropdown-item clickable' data-action='save-mol-as-png' data-canvasid='molFile_{{ upload.id }}' data-name='{{ upload.real_name }}'>
-      <i class='fas fa-fw fa-image mr-1'></i>{{ 'Save as image'|trans }}</a>
+      <button type='button' class='dropdown-item' data-action='save-mol-as-png' data-canvasid='molFile_{{ upload.id }}' data-name='{{ upload.real_name }}'>
+        <i class='fas fa-fw fa-image mr-1'></i>{{ 'Save as image'|trans }}
+      </button>
     {% endif %}
 
     {# Upload a new version: only in edit mode because currently it'll look into the editor to change the image, but it might be convenient to also have it in view mode #}
     {% if not upload.immutable %}
-      <a class='dropdown-item' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
-        <i class='fas fa-fw fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}</a>
+      <button type='button' class='dropdown-item' data-action='replace-upload' data-uploadid='{{ upload.id }}'>
+        <i class='fas fa-fw fa-sync-alt mr-1'></i>{{ 'Upload a new version of this file'|trans }}
+      </button>
     {% endif %}
 
   {% endif %}
 
-    {# Show content of plain text #}
-    {% if ext matches '/(txt|md|json)$/i' %}
-      <a class='dropdown-item' data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}' data-name='{{ upload.real_name }}'>
-        <i class='fas fa-fw fa-eye mr-1'></i>{{ 'Show content of file'|trans }}</a>
-    {% endif %}
+  {# Show content of plain text #}
+  {% if ext matches '/(txt|md|json)$/i' %}
+    <button type='button' class='dropdown-item' data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}' data-name='{{ upload.real_name }}'>
+      <i class='fas fa-fw fa-eye mr-1'></i>{{ 'Show content of file'|trans }}
+    </button>
+  {% endif %}
 
-    {# Load in NMRium #}
-    {% if ext matches '/jdx$/i' %}
-    <a class='dropdown-item' href='#' data-uploadid='{{ upload.id }}' data-action='open-in-nmrium'>
-        <i class='fas fa-fw fa-square-poll-vertical mr-1'></i>{{ 'Open in NMRium'|trans }}</a>
-    {% endif %}
+  {# Load in NMRium #}
+  {% if ext matches '/jdx$/i' %}
+    <button type='button' class='dropdown-item' data-uploadid='{{ upload.id }}' data-action='open-in-nmrium'>
+      <i class='fas fa-fw fa-square-poll-vertical mr-1'></i>{{ 'Open in NMRium'|trans }}
+    </button>
+  {% endif %}
 
-    {# More info #}
-    <a class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
-      <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}</a>
+  {# More info #}
+  <button type='button' class='dropdown-item' data-action='more-info-upload' data-uploadid='{{ upload.id }}'>
+    <i class='fas fa-fw fa-info-circle mr-1'></i>{{ 'More information'|trans }}
+  </button>
 
   {% if not upload.immutable and not Entity.isReadOnly %}
     {# ARCHIVE #}
     <div class='dropdown-divider'></div>
-    <a class='dropdown-item hover-warning' data-action='archive-upload' data-uploadid='{{ upload.id }}'>
-      <i class='fas fa-fw fa-box-archive fa-fw mr-1' title='{{ 'Archive/Unarchive'|trans }}'></i>{{ 'Archive/Unarchive'|trans }}
-    </a>
+    <button type='button' class='dropdown-item hover-warning' data-action='archive-upload' data-uploadid='{{ upload.id }}'>
+      <i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{{ 'Archive/Unarchive'|trans }}
+    </button>
     {# DESTROY #}
-    <a class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
-      <i class='fas fa-fw fa-trash-alt fa-fw mr-1' title='{{ 'Delete'|trans }}'></i>{{ 'Delete'|trans }}
-    </a>
+    <button type='button' class='dropdown-item hover-danger' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
+      <i class='fas fa-fw fa-trash-alt fa-fw mr-1'></i>{{ 'Delete'|trans }}
+    </button>
   {% endif %}
   </div>
 </div>
