--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -34,17 +34,17 @@
 
       {# id is used with data-toggle-target-extra #}
       <div>
-        <span title='{{ 'Switch layout'|trans }}' id='uploadsViewToggler' class='hl-hover-gray rounded p-1' data-action='toggle-uploads-layout' data-target-layout='{{ App.Users.userData.uploads_layout ? 0 : 1 }}'>
+        <button type='button' title='{{ 'Switch layout'|trans }}' aria-label='{{ 'Switch layout'|trans }}' id='uploadsViewToggler' class='btn hl-hover-gray p-1 lh-normal border-0 my-n1' data-action='toggle-uploads-layout' data-target-layout='{{ App.Users.userData.uploads_layout ? 0 : 1 }}'>
           <i class='fas fa-fw fa-list fa-flip-horizontal'></i>
           <i class='fas fa-fw fa-table-cells'></i>
-        </span>
-        <span title='{{ 'Show archived'|trans }}' class='hl-hover-gray rounded p-1 {{ App.Request.query.has('archived') ? 'bgnd-gray' }}' data-action='toggle-uploads-show-archived'>
+        </button>
+        <button type='button' title='{{ 'Show archived'|trans }}' aria-label='{{ 'Show archived'|trans }}' class='btn hl-hover-gray p-1 lh-normal border-0 my-n1 {{- App.Request.query.has('archived') ? ' bgnd-gray' }}' data-action='toggle-uploads-show-archived'>
           <i class='fas fa-fw fa-box-archive'></i>
-        </span>
+        </button>
       </div>
     </div>
 
-    <div class='row mt-2' id='uploadsDiv' data-save-hidden='uploadedFilesDiv'>
+    <div class='row mt-2' id='uploadsDiv' data-save-hidden='uploadsDiv'>
       {% for upload in Entity.entityData.uploads %}
         {% set ext = upload.real_name|getExt %}
 
