--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -4,118 +4,99 @@
 {# TOP TOOLBAR #}
 <hr>
 <div class='d-flex align-items-center'>
-  <a title='{{ 'Back to listing'|trans }}' href='?tab=3'>
-    <div class='hl-hover-gray p-2 rounded'>
-      <i class='fas fa-arrow-left fa-fw'></i>
-    </div>
+  <a title='{{ 'Back to listing'|trans }}' href='?tab=3' class='btn hl-hover-gray p-2 lh-normal border-0' aria-label='{{ 'Back to listing'|trans }}'>
+    <i class='fas fa-arrow-left fa-fw'></i>
   </a>
 
   <div class='vertical-separator'></div>
 
   {% if mode == 'edit' %}
     {# VIEW #}
-    <a class='mr-2' title='{{ 'View mode'|trans }}' href='?tab=3&mode=view&templateid={{ Entity.id }}'>
-      <div class='hl-hover-gray p-2 rounded main-action-button'>
-        <i class='fas fa-eye fa-fw'></i>
-      </div>
+    <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'View mode'|trans }}' href='?tab=3&mode=view&templateid={{ Entity.id }}'>
+      <i class='fas fa-eye fa-fw'></i>
     </a>
   {% else %}
     {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
       {# EDIT #}
-      <a class='mr-2' title='{{ 'Edit'|trans }}' href='?tab=3&mode=edit&templateid={{ Entity.id }}'>
-        <div class='hl-hover-gray p-2 rounded main-action-button'>
-          <i class='fas fa-pencil fa-fw'></i>
-        </div>
+      <a class='btn hl-hover-gray p-2 main-action-button mr-2 lh-normal border-0' title='{{ 'Edit'|trans }}' href='?tab=3&mode=edit&templateid={{ Entity.id }}'>
+        <i class='fas fa-pencil fa-fw'></i>
       </a>
     {% endif %}
   {% endif %}
 
   {# CREATE EXPERIMENT #}
-  <div class='mr-2'>
-    <div title='{{ 'Create experiment from template'|trans }}' data-action='create-entity' data-type='experiments' data-tplid='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
-      <i class='fas fa-circle-plus fa-fw'></i>
-    </div>
-  </div>
+  <button type='button' title='{{ 'Create experiment from template'|trans }}' aria-label='{{ 'Create experiment from template'|trans }}' data-action='create-entity' data-type='experiments' data-tplid='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+    <i class='fas fa-circle-plus fa-fw'></i>
+  </button>
 
   {# DUPLICATE TEMPLATE #}
-  <div class='mr-2'>
-    <div title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='hl-hover-gray p-2 rounded'>
-      <i class='fas fa-copy fa-fw'></i>
-    </div>
-  </div>
+  <button type='button' title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+    <i class='fas fa-copy fa-fw'></i>
+  </button>
 
   {# DOWNLOAD #}
-  <div class='mr-2'>
-    <div title='{{ 'Download template'|trans }}' data-action='download-template' data-id='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
-      <i class='fas fa-download fa-fw'></i>
-    </div>
-  </div>
+  <button type='button' title='{{ 'Download template'|trans }}' data-action='download-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+    <i class='fas fa-download fa-fw'></i>
+  </button>
 
-  {% if App.Request.getScriptName|split('/')|last == 'team.php' %}
-    {# IMPORT #}
-    <div class='mr-2'>
-      <div title='{{ 'Import to your profile'|trans }}' data-action='import-template' data-id='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
-        <i class='fas fa-file-import fa-fw'></i>
-      </div>
-    </div>
+  {# IMPORT #}
+  {% if App.Request.getScriptName|split('/')|last == 'team.php' -%}
+    <button type='button' title='{{ 'Import to your profile'|trans }}' data-action='import-template' data-id='{{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+      <i class='fas fa-file-import fa-fw'></i>
+    </button>
   {% endif %}
 
   {# RIGHT PART #}
-    <div class='ml-auto d-flex align-items-center' id='toolbarRightDiv'>
-      {# TOGGLE PIN #}
-      <div class='mr-2'>
-        <div title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' class='{{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
-          <i class='fas fa-thumbtack {{ not Entity.Pins.isPinned ? 'color-weak' }} fa-fw'></i>
-        </div>
-      </div>
+  {# TOGGLE PIN #}
+  <button type='button' title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ Entity.id }}' class='btn {{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 lh-normal border-0 ml-auto mr-2'>
+    <i class='fas fa-thumbtack fa-fw {{- not Entity.Pins.isPinned ? ' color-weak' }}'></i>
+  </button>
 
-      {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
-        {# LOCK #}
-        {% set lockIcon = 'fa-lock-open' %}
-        {% set alt = 'Lock/Unlock item'|trans %}
-        {% if Entity.entityData.locked %}
-            {% set lockIcon = 'fa-lock' %}
-            {% set alt = Entity.entityData.locked_at %}
-        {% endif %}
-        <div title='{{ alt }}' data-action='toggle-lock' data-id='{{ Entity.id }}' class='{{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 rounded'>
-          <i class='fas {{ lockIcon }} fa-fw'></i>
-        </div>
+  {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
+    {# LOCK #}
+    {% set lockIcon = 'fa-lock-open' %}
+    {% set alt = 'Lock/Unlock item'|trans %}
+    {% if Entity.entityData.locked %}
+        {% set lockIcon = 'fa-lock' %}
+        {% set alt = Entity.entityData.locked_at %}
+    {% endif %}
+    <button type='button' id='lockTemplateButton' title='{{ alt }}' data-action='toggle-lock' data-id='{{ Entity.id }}' class='btn {{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 lh-normal border-0'>
+      <i class='fas {{ lockIcon }} fa-fw'></i>
+    </button>
 
     <div class='vertical-separator'></div>
 
-        {# MORE OPTIONS #}
-        <div class='dropdown'>
-          <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' class='hl-hover-gray p-2 px-3 rounded'>
-            <i class='fas fa-ellipsis-v'></i>
-          </div>
+    {# MORE OPTIONS #}
+    <div class='dropdown'>
+      <button data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' type='button' title='{{ 'Toggle pin'|trans }}' class='btn hl-hover-gray p-2 lh-normal border-0'>
+        <i class='fas fa-ellipsis-v fa-fw'></i>
+      </button>
 
-          <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
-            {% if mode == 'edit' %}
-              {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
-              <a class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}' href='#'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</a>
-            {% endif %}
-            {# REVISIONS #}
-            <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
-            {# CHANGELOG #}
-            <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
-            {# TRANSFER OWNERSHIP #}
-            {% if Entity.entityData.userid == App.Users.userData.userid or App.Users.isAdmin %}
-              <a class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</a>
-            {% endif %}
+      <div class='dropdown-menu dropdown-menu-right'>
+        {% if mode == 'edit' %}
+          {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
+          <button class='dropdown-item' type='button' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
+        {% endif %}
+        {# REVISIONS #}
+        <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
+        {# CHANGELOG #}
+        <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+        {# TRANSFER OWNERSHIP #}
+        {% if Entity.entityData.userid == App.Users.userData.userid or App.Users.isAdmin %}
+          <button type='button' class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</button>
+        {% endif %}
 
-            {# DELETE #}
-            {% if not Entity.entityData.locked %}
-              {# DESTROY #}
-              <div class='dropdown-divider'></div>
-              <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
-                <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
-              </a>
-            {% endif %}
-          </div>
-        </div>
-      {% endif %}
-    <hr>
-  </div>
+        {# DELETE #}
+        {% if not Entity.entityData.locked %}
+          {# DESTROY #}
+          <div class='dropdown-divider'></div>
+          <button type='button' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
+            <i class='fas fa-trash-alt fa-fw'></i> {{ 'Destroy template'|trans }}
+          </button>
+        {% endif %}
+      </div>
+    </div>
+  {% endif %}
 </div>
 <hr>
 
@@ -150,7 +131,7 @@
         </div>
       {% endif %}
       <div class='text-center mt-4'>
-        <button data-action='update-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+        <button type='button' data-action='update-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
       </div>
     </div>
 
