--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -36,28 +36,22 @@
     {% set lastquery = 'mode=show' %}
   {% endif %}
 
-  <a title='{{ 'Back to listing'|trans }}' href='?{{ lastquery }}'>
-    <div class='hl-hover-gray p-2 rounded'>
-      <i class='fas fa-arrow-left fa-fw'></i>
-    </div>
+  <a title='{{ 'Back to listing'|trans }}' aria-label='{{ 'Back to listing'|trans }}' href='?{{ lastquery }}' class='btn hl-hover-gray p-2 lh-normal border-0'>
+    <i class='fas fa-arrow-left fa-fw'></i>
   </a>
 
   <div class='vertical-separator'></div>
 
   {% if mode == 'edit' %}
     {# VIEW #}
-    <a class='mr-2' title='{{ 'View mode'|trans }}' href='?mode=view&id={{ Entity.id }}'>
-      <div class='hl-hover-gray p-2 rounded main-action-button'>
-        <i class='fas fa-eye fa-fw'></i>
-      </div>
+    <a title='{{ 'View mode'|trans }}' aria-label='{{ 'View mode'|trans }}' href='?mode=view&id={{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 main-action-button lh-normal border-0'>
+      <i class='fas fa-eye fa-fw'></i>
     </a>
   {% else %}
     {# EDIT #}
     {% if not (Entity.entityData.locked or Entity.isReadOnly) %}
-      <a class='mr-2' title='{{ 'Edit'|trans }}' href='?mode=edit&id={{ Entity.id }}'>
-        <div class='hl-hover-gray p-2 rounded main-action-button'>
-          <i class='fas fa-pencil fa-fw'></i>
-        </div>
+      <a title='{{ 'Edit'|trans }}' aria-label='{{ 'Edit'|trans }}' href='?mode=edit&id={{ Entity.id }}' class='btn hl-hover-gray p-2 mr-2 rounded main-action-button lh-normal border-0'>
+        <i class='fas fa-pencil fa-fw'></i>
       </a>
     {% endif %}
   {% endif %}
@@ -65,17 +59,13 @@
   {% if not App.Session.has('is_anon') %}
 
     {# DUPLICATE #}
-    <div class='mr-2'>
-      <div title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='hl-hover-gray p-2 rounded'>
-        <i class='fas fa-copy fa-fw'></i>
-      </div>
-    </div>
+    <button type='button' title='{{ 'Duplicate'|trans }}' aria-label='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+      <i class='fas fa-copy fa-fw'></i>
+    </button>
 
     {% if Entity.type == 'items' and Entity.canBook and Entity.entityData.is_bookable %}
-      <a class='mr-2' title='{{ 'Book item'|trans }}' href='team.php?tab=1&item={{ Entity.id }}'>
-        <div class='hl-hover-gray p-2 rounded'>
-          <i class='fas fa-calendar-plus fa-fw'></i>
-        </div>
+      <a class='btn mr-2 hl-hover-gray p-2 lh-normal border-0' title='{{ 'Book item'|trans }}' aria-label='{{ 'Book item'|trans }}' href='team.php?tab=1&item={{ Entity.id }}'>
+        <i class='fas fa-calendar-plus fa-fw'></i>
       </a>
     {% endif %}
 
@@ -83,11 +73,9 @@
 
   {% if not App.Session.has('is_anon') and App.Config.configArr.anon_users and Entity.entityData.access_key %}
     {# SHARE #}
-    <div>
-      <div title='{{ 'Share'|trans }}' data-action='share' class='hl-hover-gray p-2 rounded'>
-        <i class='fas fa-share-alt fa-fw'></i>
-      </div>
-    </div>
+    <button title='{{ 'Share'|trans }}' aria-label='{{ 'Share'|trans }}' data-action='share' class='btn hl-hover-gray p-2 lh-normal border-0'>
+      <i class='fas fa-share-alt fa-fw'></i>
+    </button>
     <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
     <div class='vertical-separator'></div>
   {% endif %}
@@ -95,20 +83,16 @@
 
   {# TIMESTAMP EXPERIMENT #}
   {% if Entity.type == 'experiments' and not App.Session.has('is_anon') and not Entity.isReadOnly %}
-    <div class='mr-2'>
-      <div title='{{ 'Timestamp Experiment'|trans }}' data-action='toggle-modal' data-target='timestampModal' class='hl-hover-gray p-2 rounded'>
-        <i class='fas fa-calendar-check fa-fw'></i>
-      </div>
-    </div>
+    <button type='button' title='{{ 'Timestamp Experiment'|trans }}' aria-label='{{ 'Timestamp Experiment'|trans }}' data-action='toggle-modal' data-target='timestampModal' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+      <i class='fas fa-calendar-check fa-fw'></i>
+    </button>
   {% endif %}
 
   {# BLOXBERG TIMESTAMP #}
   {% if not Entity.isReadOnly and App.Config.configArr.blox_enabled %}
-    <div class='mr-2'>
-      <div title='{{ 'Add to blockchain'|trans }}' data-action='bloxberg' class='hl-hover-gray p-2 rounded'>
-        <i class='fas fa-cubes fa-fw'></i>
-      </div>
-    </div>
+    <button type='button' title='{{ 'Add to blockchain'|trans }}' aria-label='{{ 'Add to blockchain'|trans }}' data-action='bloxberg' class='btn hl-hover-gray p-2 mr-2 lh-normal border-0'>
+      <i class='fas fa-cubes fa-fw'></i>
+    </button>
   {% endif %}
 
   {% if not App.Session.has('is_anon') %}
@@ -117,10 +101,10 @@
 
   {# DOWNLOAD / EXPORT MENU #}
   <div class='dropdown'>
-    <div class='hl-hover-gray d-inline p-2 rounded mr-2' title='{{ 'Export'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Export'|trans }}' role='button'>
+    <button class='btn hl-hover-gray d-inline p-2 mr-2' title='{{ 'Export'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Export'|trans }}' type='button'>
       <i class='fas fa-download fa-fw'></i>
-    </div>
-    <div class='dropdown-menu' aria-label='{{ 'Export'|trans }}'>
+    </button>
+    <div class='dropdown-menu'>
       <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdf'><i class='fas fa-file-pdf fa-fw'></i> {{ 'PDF File'|trans }}</a>
       <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdfa'><i class='fas fa-file-pdf fa-fw'></i> {{ 'Long term storage PDF'|trans }}</a>
       <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zip'><i class='fas fa-file-archive fa-fw'></i> {{ 'ZIP Archive'|trans }}</a>
@@ -136,11 +120,9 @@
     {% if not App.Session.has('is_anon') %}
 
       {# TOGGLE PIN #}
-      <div class='mr-2'>
-        <div title='{{ 'Toggle pin'|trans }}' data-action='toggle-pin' class='{{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 rounded'>
-          <i class='fas fa-thumbtack {{ not Entity.Pins.isPinned ? 'color-weak' }} fa-fw'></i>
-        </div>
-      </div>
+      <button type='button' title='{{ 'Toggle pin'|trans }}' aria-label='{{ 'Toggle pin'|trans }}' data-action='toggle-pin' class='btn {{ Entity.Pins.isPinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 lh-normal border-0'>
+        <i class='fas fa-thumbtack {{ not Entity.Pins.isPinned ? 'color-weak' }} fa-fw'></i>
+      </button>
 
       {# LOCK #}
       {% set lockIcon = 'fa-lock-open' %}
@@ -149,30 +131,30 @@
           {% set lockIcon = 'fa-lock' %}
           {% set alt = Entity.entityData.locked_at %}
       {% endif %}
-      <div title='{{ alt }}' data-action='lock-entity' class='{{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 rounded'>
+      <button type='button' title='{{ alt }}' aria-label='{{ alt }}' data-action='lock-entity' class='btn {{ Entity.entityData.locked ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 lh-normal border-0'>
         <i class='fas {{ lockIcon }} fa-fw'></i>
-      </div>
+      </button>
     {% endif %}
 
     <div class='vertical-separator'></div>
     {# MORE OPTIONS #}
     <div class='dropdown'>
-      <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' class='hl-hover-gray p-2 px-3 rounded'>
-        <i class='fas fa-ellipsis-v'></i>
-      </div>
+      <button data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' type='button' title='{{ 'Toggle pin'|trans }}' class='btn hl-hover-gray p-2 lh-normal border-0'>
+        <i class='fas fa-fw fa-ellipsis-v'></i>
+      </button>
 
-      <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+      <div class='dropdown-menu dropdown-menu-right'>
         {# BOOKING PARAMS #}
         {% if Entity.type == 'items' %}
-          <a class='dropdown-item' data-action='toggle-modal' data-target='bookingParamsModal'><i class='fas fa-calendar-plus fa-fw' title='{{ 'Modify booking parameters'|trans }}'></i> {{ 'Modify booking parameters'|trans }}</a>
+          <button type='button' class='dropdown-item' data-action='toggle-modal' data-target='bookingParamsModal'><i class='fas fa-calendar-plus fa-fw' title='{{ 'Modify booking parameters'|trans }}'></i> {{ 'Modify booking parameters'|trans }}</button>
         {% endif %}
         {# TRANSFER OWNERSHIP #}
         {% if Entity.type == 'items' and (Entity.entityData.userid == App.Users.userData.userid or App.Users.isAdmin) %}
-          <a class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</a>
+          <button type='button' class='dropdown-item' data-action='toggle-modal' data-target='ownerModal'><i class='fas fa-people-arrows fa-fw' title='{{ 'Manage Permissions'|trans }}'></i> {{ 'Transfer ownership'|trans }}</button>
         {% endif %}
         {% if mode == 'edit' %}
           {# SWITCH EDITOR the data-editor is here to indicate which is the current editor #}
-          <a class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}' href='#'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</a>
+          <button type='button' class='dropdown-item' id='iHazEditor' data-action='switch-editor' data-editor='{{ editor }}'><i class='fas fa-pencil-alt fa-fw'></i> {{ 'Switch editor'|trans }}</button>
         {% endif %}
         {# REVISIONS #}
         <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ 'See revisions'|trans }}</a>
@@ -180,14 +162,14 @@
         <a class='dropdown-item' href='?id={{ Entity.id }}&mode=changelog'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
 
         {% if not App.Session.has('is_anon') %}
-          <a class='dropdown-item hover-warning' data-action='archive-entity'>
-            <i class='fas fa-fw fa-box-archive fa-fw mr-1' title='{{ 'Archive/Unarchive'|trans }}'></i>{{ 'Archive/Unarchive'|trans }}
-          </a>
+          <button type='button' class='dropdown-item hover-warning' data-action='archive-entity'>
+            <i class='fas fa-fw fa-box-archive fa-fw' title='{{ 'Archive/Unarchive'|trans }}'></i> {{ 'Archive/Unarchive'|trans }}
+          </button>
         {% endif %}
         {% if App.Config.configArr.deletable_xp == '1' %}
           <div class='dropdown-divider'></div>
           {# DELETE #}
-          <a class='dropdown-item hover-danger {{ Entity.entityData.timestamped or (not deletableXp and (Entity.type == 'experiments')) ? 'disabled' }}' href='#' data-action='destroy'><i class='fas fa-trash-alt fa-fw' title='{{ 'Delete'|trans }}'></i> {{ 'Delete'|trans }}</a>
+          <button type='button' class='dropdown-item hover-danger {{ Entity.entityData.timestamped or (not deletableXp and (Entity.type == 'experiments')) ? 'disabled' }}' data-action='destroy'><i class='fas fa-trash-alt fa-fw' title='{{ 'Delete'|trans }}'></i> {{ 'Delete'|trans }}</button>
         {% endif %}
       </div>
     </div>
